fix: dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -13,11 +13,5 @@ body {
   /* place-items: center; */
   /* min-width: 320px; */
   /* min-height: 100vh; */
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
+  background-color: #FFFFFF;
 }
